# mapredo

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  mapredo.spec.in
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox.in
frontend/: .gitignore  CMakeLists.txt  Makefile.am  main.cpp
mapredo/: .gitignore  CMakeLists.txt  Makefile.am  base.cpp  base.h  buffer_trader.cpp  buffer_trader.h  collector.h  compression.h  config_param.h  configuration.h  consumer.cpp  consumer.h  data_reader.h  data_reader_queue.h  directory.cpp  directory.h  directory_win32.cpp  directory_win32.h  engine.cpp  engine.h  file_merger.cpp  file_merger.h  input_buffer.h  key_holder.h  lookup.h  mapreducer.h  mcollector.h  merge_cache.cpp  merge_cache.h  plugin_loader.h  plugin_loader_win32.h  prefered_output.h  prefered_stdout_output.h  ram_reader.h  rcollector.h  settings.cpp  settings.h  sorter.cpp  sorter.h  (+5 more)
msvc/: mapredo.sln
msvc/frontend/: frontend.vcxproj  frontend.vcxproj.filters
msvc/mapredo/: mapredo.def  mapredo.vcxproj  mapredo.vcxproj.filters
msvc/wordcount/: wordcount.def  wordcount.vcxproj  wordcount.vcxproj.filters
msvc/wordsort/: wordsort.def  wordsort.vcxproj  wordsort.vcxproj.filters
plugins/: CMakeLists.txt  Makefile.am  wordcount.cpp  wordcount.h  wordsort.cpp  wordsort.h
ruby/: CMakeLists.txt  mapredo.rb
test/: .gitignore  Makefile.am  plugin.cpp  test.cpp
tests/: CMakeLists.txt  buffer_trader.cpp  data_reader.cpp  merge_cache.cpp  plugin.cpp  test.cpp
